[metadata]
name = neutron-zvm-plugin
version = 5.0.0
summary = zVM ML2 mechanism driver and zVM neutron agent.
description-file = README.rst
author = IBM
home-page = https://wiki.openstack.org/wiki/Networking-zvm
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[entry_points]
neutron.ml2.mechanism_drivers =
    zvm = neutron.plugins.ml2.drivers.zvm.mech_zvm:ZvmMechanismDriver

[files]
packages =
    neutron/plugins/zvm
    neutron/plugins/ml2/drivers/zvm
data_files =
    /etc/neutron/plugins/zvm =
        etc/neutron/plugins/zvm/neutron_zvm_plugin.ini.sample
scripts =
    bin/neutron-zvm-agent

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking-zvm/locale
domain = networking-zvm

[update_catalog]
domain = networking-zvm
output_dir = networking-zvm/locale
input_file = networking-zvm/locale/networking-zvm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking-zvm/locale/networking-zvm.pot




